--- a/form_login.html
+++ b/form_login.html
@@ -26,7 +26,7 @@
             Auth();
             async function Auth(){
                 // отправляем данные на сервер в скрипт login.php
-                let response = await fetch('login.php',{
+                let response = await fetch('/login.php',{
                     //формируем тело запроса
                     body: JSON.stringify({
                         login,
@@ -40,7 +40,10 @@
                         // 'Content-Type': 'application/x-www-form-urlencoded',
                     }
                 })
-                console.log(await response.json());
+                let dates = await response.json();
+                if (dates['status'] == true) {
+                    document.location.href= await "/";
+                }
             }
         }
     </script>
