--- a/form_register.html
+++ b/form_register.html
@@ -109,6 +109,7 @@
                 )
             {
                 aaa();
+                document.location.href= await "/";
             }
             async function aaa(){
                 
